--- a/src/pages/data.astro
+++ b/src/pages/data.astro
@@ -1,10 +1,8 @@
 ---
 import DataView from "../components/DataView.astro"
-import LoginForm from "../components/LoginForm.astro"
 import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout title="Inicio">
-	<LoginForm/>
-	
+<Layout title="data">
+    <DataView/>
 </Layout>
