--- a/src/components/LoginForm.astro
+++ b/src/components/LoginForm.astro
@@ -1,19 +1,34 @@
+---
+import { db, Usuario } from 'astro:db';
+
+if (Astro.request.method === 'POST') {
+  // Parse form data
+  const formData = await Astro.request.formData();
+  const nombre = formData.get('nombre');
+  const telefono = formData.get('telefono');
+  if (typeof nombre === 'string' && typeof telefono === 'string') {
+    // Insert form data into the Comment table
+    await db.insert(Usuario).values({ nombre, telefono });
+  }
+}
+---
+
 <div class=" mx-auto mt-9 w-full max-w-xs">
-    <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+    <form method="POST" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
-                Email
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="correo">
+                correo
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Email">
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="correo" type="email" placeholder="correo">
         </div>
         <div class="mb-6">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-                Password
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="telefono">
+                telefono
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************">
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="telefono" type="text" placeholder="">
         </div>
         <div class="flex items-center justify-between">
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                 Sign In
             </button>
         </div>
