--- a/src/layouts/AuthLayout.astro
+++ b/src/layouts/AuthLayout.astro
@@ -16,7 +16,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<main class="">
+			<slot />
+		</main>
 	</body>
 </html>
 <style is:global>
