--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -92,7 +92,7 @@ import AuthLayout from "../layouts/AuthLayout.astro";
                     Recuperar contraseña
                 </h5>
                 <p class="text-center text-sm text-gray-700 mt-5">
-                    Si desea recuperar la contraseña ponte en contacto con los
+                    Si deseas recuperar la contraseña ponte en contacto con los
                     administradores y lo más pronto posible se le ayudará.
                 </p>
                 <button
