--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Navbar from '../components/Navbar.astro';
+
 
 interface Props {
 	title: string;
@@ -18,7 +20,10 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<main class="flex flex-col h-screen bg-slate text-gray-900">
+			<Navbar />
+			<slot />
+		</main>
 	</body>
 </html>
 <style is:global>
