--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
-import LoginForm from "../components/LoginForm.astro"
+import Program from "../components/icons/Program.astro"
+import Time from "../components/icons/Time.astro"
+import Users from "../components/icons/Users.astro"
+import IndexCard from "../components/IndexCard.astro"
 import Layout from "../layouts/Layout.astro"
 
 const {isAdmin, user} = Astro.locals
@@ -8,24 +11,31 @@ const {isAdmin, user} = Astro.locals
 ---
 
 <Layout title="Inicio">
-	<button id="logout" class="text-red-500 font-bold text-2xl">Cerrar Sesión</button>
-	<h1>Bienvenido {user?.name}</h1>
-	{
-		isAdmin && <h1>Soy Admin :D</h1>
-	}
-	<LoginForm/>
+
+	<section class="flex justify-center items-center flex-1 gap-x-10">
+		{isAdmin && (
+			<IndexCard
+			href="/data"
+			title="Lista de usuarios"
+			subtitle="Organiza, edita y elimina todos los usuarios del PPAM."
+			>
+				<Users className="size-28 text-cyan-600 mx-auto group-hover:text-white"/>
+			</IndexCard>
+		)}
+		<IndexCard
+			href="/"
+			title="Disponibilidad"
+			subtitle="Edita tu disponibilidad para el PPAM."
+		>
+			<Time className="size-28 text-cyan-600 mx-auto group-hover:text-white"/>
+		</IndexCard>
+		<IndexCard
+			href={isAdmin ? '/program' : 'program/CalenderView'}
+			title="Programa PPAM"
+			subtitle="Consulta el programa de PPAM para ver todos los participantes."
+		>
+			<Program className="size-28 text-cyan-600 mx-auto group-hover:text-white"/>
+		</IndexCard>
+	</section>
 </Layout>
 
-<script>
-
-	const {signOut} = await import('auth-astro/client')
-
-	const logout = document.querySelector('#logout')
-
-	logout?.addEventListener('click', async (e) => {
-		e.preventDefault()
-		await signOut()
-		window.location.replace('/signin')
-	})
-
-</script>
