--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const {isAdmin, user} = Astro.locals
 
 <Layout title="Inicio">
 
-	<section class="flex justify-center items-center flex-1 gap-x-10">
+	<section class="flex flex-wrap justify-center items-center flex-1 gap-x-10 gap-y-5 my-10 md:mt-0">
 		{isAdmin && (
 			<IndexCard
 			href="/data"
